[gd_scene load_steps=30 format=3 uid="uid://cjaojb228sku2"]

[ext_resource type="Script" path="res://Playerdata/player.gd" id="1_ng14g"]
[ext_resource type="Resource" uid="uid://1oj14qi0n73h" path="res://Playerdata/Resource/DefaultMovementData.tres" id="2_dc4qg"]
[ext_resource type="Resource" uid="uid://bv18tj64g6nih" path="res://Playerdata/Resource/DefaultStatsData.tres" id="3_xhhgl"]
[ext_resource type="Script" path="res://Playerdata/Scripts/HealthBar.gd" id="4_phj2p"]
[ext_resource type="Script" path="res://Playerdata/Scripts/HurtBox.gd" id="5_tgcae"]
[ext_resource type="Script" path="res://Playerdata/Scripts/Hitbox.gd" id="6_6jj0n"]
[ext_resource type="Texture2D" uid="uid://binlk4feu7vep" path="res://Idle-Sheet.png" id="7_qwd60"]
[ext_resource type="Texture2D" uid="uid://jp0i5k1yesdu" path="res://Running-Sheet.png" id="8_j8130"]
[ext_resource type="Texture2D" uid="uid://bvqrnb4nhgtao" path="res://AttackBasicSheet.png" id="9_aytks"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_un4x1"]
size = Vector2(2, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_prvjc"]
size = Vector2(6, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jfbfm"]
size = Vector2(6, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dv3bk"]
size = Vector2(6, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_setf6"]
size = Vector2(14, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_81j1y"]
atlas = ExtResource("7_qwd60")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3tk2"]
atlas = ExtResource("7_qwd60")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bv7cp"]
atlas = ExtResource("7_qwd60")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2horg"]
atlas = ExtResource("7_qwd60")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5ttc"]
atlas = ExtResource("8_j8130")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nr4i1"]
atlas = ExtResource("8_j8130")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygj4g"]
atlas = ExtResource("8_j8130")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4nh7"]
atlas = ExtResource("8_j8130")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eo68a"]
atlas = ExtResource("8_j8130")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_feu50"]
atlas = ExtResource("8_j8130")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s40pw"]
atlas = ExtResource("8_j8130")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsoro"]
atlas = ExtResource("8_j8130")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_a3m6q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_81j1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3tk2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bv7cp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2horg")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5ttc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nr4i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygj4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4nh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eo68a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_feu50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s40pw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsoro")
}],
"loop": true,
"name": &"Running",
"speed": 7.0
}]

[sub_resource type="Animation" id="Animation_34eyl"]
resource_name = "Basic_Attack"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attacking:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01, 0.02, 0.03, 0.04, 0.06, 0.12, 0.18, 0.31, 0.32, 0.33, 0.34, 0.35, 0.36, 0.37),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 7, 9, 10, 11, 12, 13, 15, 14, 16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBox/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.05, 0.08, 0.26),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(12, -8), Vector2(4.5, -2.5), Vector2(12, -8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/CollisionShape2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.05, 0.08, 0.26),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(1, 1), Vector2(2.8, 6.5), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitBox:monitorable")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.04, 0.26),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HitBox:already_hit")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.27),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("HitBox:monitoring")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.04, 0.26),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ufbjt"]
_data = {
"Basic_Attack": SubResource("Animation_34eyl")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 3
floor_constant_speed = true
floor_snap_length = 3.0
script = ExtResource("1_ng14g")
movement_data = ExtResource("2_dc4qg")
stat_data = ExtResource("3_xhhgl")

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_un4x1")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.125, 1.5)
position_smoothing_enabled = true

[node name="TimeHandler" type="Node" parent="."]

[node name="CoyoteJumpTimer" type="Timer" parent="TimeHandler"]
wait_time = 0.1
one_shot = true

[node name="StunTimer" type="Timer" parent="TimeHandler"]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBar" type="Container" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_phj2p")

[node name="CharacterAttributes" type="Node2D" parent="."]

[node name="HarzardDetector" type="Area2D" parent="CharacterAttributes"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterAttributes/HarzardDetector"]
position = Vector2(0, -8.5)
shape = SubResource("RectangleShape2D_prvjc")

[node name="CharacterCollisionShape" type="Area2D" parent="CharacterAttributes"]

[node name="CollisionShape" type="CollisionShape2D" parent="CharacterAttributes/CharacterCollisionShape"]
position = Vector2(0, -8.5)
shape = SubResource("RectangleShape2D_jfbfm")

[node name="HurtBox" type="Area2D" parent="CharacterAttributes"]
collision_layer = 64
collision_mask = 0
script = ExtResource("5_tgcae")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterAttributes/HurtBox"]
position = Vector2(0, -9)
shape = SubResource("RectangleShape2D_dv3bk")

[node name="HitBox" type="Area2D" parent="CharacterAttributes"]
collision_layer = 32
collision_mask = 256
script = ExtResource("6_6jj0n")
damage = 100
stun_time = 0.5
knock_back = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterAttributes/HitBox"]
visible = false
position = Vector2(4.5, -2.5)
scale = Vector2(2.8, 6.5)
shape = SubResource("RectangleShape2D_setf6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterAttributes"]
position = Vector2(0, -10)
scale = Vector2(0.636719, 0.636719)
sprite_frames = SubResource("SpriteFrames_a3m6q")
animation = &"Running"

[node name="Attacking" type="Sprite2D" parent="CharacterAttributes"]
visible = false
position = Vector2(1.19209e-07, -10)
scale = Vector2(0.612111, 0.612111)
texture = ExtResource("9_aytks")
hframes = 18

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterAttributes"]
libraries = {
"": SubResource("AnimationLibrary_ufbjt")
}

[connection signal="area_entered" from="CharacterAttributes/HarzardDetector" to="." method="_on_harzard_detector_area_entered"]
[connection signal="area_exited" from="CharacterAttributes/HarzardDetector" to="." method="_on_harzard_detector_area_exited"]
[connection signal="area_entered" from="CharacterAttributes/HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_entered" from="CharacterAttributes/HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="property_list_changed" from="CharacterAttributes/HitBox" to="CharacterAttributes/HitBox" method="_on_property_list_changed"]
[connection signal="animation_finished" from="CharacterAttributes/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="CharacterAttributes/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
